--- a/appendixa_bio.tex
+++ b/appendixa_bio.tex
@@ -121,8 +121,8 @@ Lawrence Livermore National Laboratory: Research Scientist, Quantum Simulation G
     \centering
     \begin{tabular}{ll}
 Staff Scientist, Lawrence Livermore National Laboratory &       2016 - present   \\
-Postdoctral Fellow, Lawrence Livermore National Laboratory     &  2014 - 2016   \\
-Postdoctral Fellow, Harvard University &       2010 - 2014 \\
+Postdoctoral Fellow, Lawrence Livermore National Laboratory     &  2014 - 2016   \\
+Postdoctoral Fellow, Harvard University &       2010 - 2014 \\
     \end{tabular}
 \end{table}
 
@@ -146,7 +146,7 @@ Postdoctral Fellow, Harvard University &       2010 - 2014 \\
 \begin{itemize}
     \item 2014–present: XA has collaborated with A. A. Correa at LLNL on research program on the application of electron dynamics and time-dependent density functional theory for warm dense matter and other research areas that are fundamental for LLNL’s mission. This has led to secure LDRD and EFRC funding, and several publications (1--3, for example)
     \item 2016–2018: As the main developer in charge of the Qball code, XA collaborated with researchers inside LLNL, including Tuan Anh Pham, Alfredo Correa, and Tadashi Ogitsu, in implementing new and even unique features, and adapting the code for their research work. 
-    \item 2005–present: Main developers to the Octopus package. A time-dependent density functional theory software package used by hundreds of users around the world, that contains 220k lines of code. He has made are more than 5,000 commits and contributed 13 million lines of changes to the code. This includes the implementation of the linear response module of Octopus. He also coordinates the development effort of around 20 developers from several countries, to ensure the validity of the programs results, the quality of the code, the usability and the documentation. See publications 4, 8.
+    \item 2005–2019: Main developer to the Octopus package. A time-dependent density functional theory software package used by hundreds of users around the world, that contains 220k lines of code. He has made are more than 5,000 commits and contributed 13 million lines of changes to the code. This includes the implementation of the linear response module of Octopus. He also coordinates the development effort of around 20 developers from several countries, to ensure the validity of the programs results, the quality of the code, the usability and the documentation. See publications 4, 8.
     \item 2007–2018: Porting and optimization of electronic structure codes for HPC platforms. Porting of the Octopus code to GPUs (publication 7) obtaining a 5x speed up over the CPU code and up to a 3x speed up over other GPU codes. Massively parallel implementation of Octopus over MPI, scaling up to 400,000 cores (publications 6 and 8), that lead to the calculation of the optical absorption of a photosynthetic complex with 6,000 atoms, the largest TDDFT calculation done up to now (publication 5). Together with A. A. Correa and other LLNL researchers participated in the parallel implementation of TDDFT in the QBall code, that scaled to the full Sequoia supercomputer (1.6 million cores) with near 50\% efficiency (publication 3).
     \item He is regularly invited to present and participate in meetings and workshops of the time-dependent density functional theory community. He contributes to the development of the field (publications 1-2, 9-10) and is up to date in the latest developments in the area.
 \end{itemize}
