--- a/appendixa_bio.tex
+++ b/appendixa_bio.tex
@@ -94,7 +94,8 @@ Lawrence Fellow, Lawrence Livermore National Laboratory & 2009-2012 \\
 
 \subsubsection*{Synergestic Activities}
 \begin{itemize}
-    \item •	2018–present: QMCPACK Exascale Computing Project (ECP), (PI Paul Kent) provided architectural C++ generic libraries for multi-dimensional arrays interoperable in GPU and CPU memory and generic MPI communication for Real Space and Auxiliar Field QMC.
+    \item 2021: the director of Computational Chemistry and Materials Sciences Summer School at Lawrence Livermore National Laboratory. He is mentoring two summer students interested in learning about the time dependent quantum mechanical problems using INQ code. E.K.U. Gross is invited as a lecturer.
+    \item 2018–present: QMCPACK Exascale Computing Project (ECP), (PI Paul Kent) provided architectural C++ generic libraries for multi-dimensional arrays interoperable in GPU and CPU memory and generic MPI communication for Real Space and Auxiliar Field QMC.
     \item 2017–present: PI LDRD on linear and non-linear electrical and thermal conductivity from real-time dynamics: the subject closely related to the proposed scientific research subjects. The current core members: Xavier Andrade (LLNL), Alicia Welden (PD, LLNL) and R. Ullah (PD, LLNL).
     \item 2001–present: a user of high-performance ab-initio molecular dynamics codes, GP and Qbox, developed by Francois Gygi of U. C. Davis. This often involved benchmarking on particular high performance computer systems introduced at Lawrence Livermore National Laboratory through the Grand Challenge Supercomputing Program (originally called Science Run under which LUSTRE file system was tested). Outcome of these activities in scientific side led to numerous high-profile publications. He has a history of the first and only implementation of Time-Dependent Density Functional Theory in Qbox (see publication 6 and 9).
     \item 2016–2018: He was Thrust leader at the Energy Frontier Research Center on Energy Dissipation and Defect Evolution (EDDE). As part of that Center, he developed a new theory of electron–phonon coupling scalable to massive number of ions for the simulation of ion cascade and radiation damage (see publication).
